# lsbi

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  README.rst  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yaml  build.yaml  code_style.yaml  pr_checks.yaml  unittests.yaml
docs/source/: background.rst  conf.py  index.rst  lsbi.rst  modules.rst
docs/source/tutorials/: 01_linear_regression.ipynb  02_broadcasting_and_performance.ipynb  03_mixture_models.ipynb
lsbi/: __init__.py  model.py  model_1.py  network.py  plot.py  stats.py  stats_1.py  utils.py
tests/: test_model.py  test_model_1.py  test_networks.py  test_plot.py  test_scaffolding.py  test_stats.py  test_stats_1.py  test_utils.py
